--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <body>
     <header class="nav-main">
-      <img class="brand" src="/img/smile.png" alt="" />
+      <img class="brand" src="./img/smile.png" alt="" />
       <ul class="nav-left">
         <li><a href="#">Home</a></li>
         <li><a href="#">About Us</a></li>
@@ -107,7 +107,7 @@
     
     <footer>
       <div class="sec1">
-        <img src="/img/smile.png" alt="" />
+        <img src="./img/smile.png" alt="" />
         <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
       
