--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smile fruit</title>
-    <link rel="shortcut icon" href="/img/ico.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/ico.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
