--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
       <div class="contenedor-about-us">
         <img class="post-banner-img" src="./img/img1.jpg" alt="" />
         <div class="articles">
-          <div class="art1">
+          <div class="art1" id="a1">
             <h3><span>1</span>quality pear</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, nulla. Dolorem soluta consequatur libero cupiditate reiciendis at praesentium, ad quibusdam expedita odit accusantium, culpa architecto eum voluptas reprehenderit impedit earum?
           </p>
           </div>
-          <div class="art1">
+          <div class="art1" id="a2">
             <h3><span>2</span>quality pear</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate saepe perferendis nam consequatur officiis quae, vero hic in quo eveniet modi animi nostrum repellat delectus blanditiis debitis quis asperiores et.
@@ -88,7 +88,7 @@
       <h1>More about us</h1>
       <div class="cards">
         <div class="card" id="card1">
-          <a href="#"><img src="./img/bg5.jpg" alt="" /></a>
+          <a href="#"><img src="./img/bg9.png" alt="" /></a>
           <p>Lorem ipsum dolor sit amet consectetur
             adipisicing elit. Possimus quam eligendi quod explicabo, eaque quas.</p>
         </div>
@@ -98,7 +98,7 @@
             adipisicing elit. Possimus quam eligendi quod explicabo, eaque quas.</p>
         </div>
         <div class="card" id="card3">
-          <a href="#"><img src="./img/bg9.png" alt="" /></a>
+          <a href="#"><img src="./img/bg5.jpg" alt="" /></a>
           <p>Lorem ipsum dolor sit amet consectetur
             adipisicing elit. Possimus quam eligendi quod explicabo, eaque quas.</p>
         </div>
