--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rocha world</title>
-    <link rel="shortcut icon" href="./img/ico.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/icon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -45,7 +45,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Rocha Pear</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="./contact/contact.html">Contact</a></li>
       </ul>
     </header>
     <section class="banner">
@@ -107,7 +107,7 @@
     
     <footer>
       <div class="sec1">
-        <img src="./img/smile.png" alt="" />
+        <img src="./img/smily.png" alt="" />
         <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
       
